istio-manifests.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: default
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-virtual-service
  namespace: default
spec:
  hosts:
  - '*'
  gateways:
    - httpbin-gateway
    - mesh
  http:
  - name: "httpbin-get-route"
    match:
      - uri:
          prefix: "/get"
    timeout: 5s  
    rewrite:
      authority: httpbin.default.svc.cluster.local:8000
    route:
    - destination:
        host: httpbin.default.svc.cluster.local
        port:
          number: 8000
  - name: "httpbin-anything-route"
    match:
      - uri:
          prefix: "/anything"
    timeout: 5s  
    rewrite:
      authority: httpbin.default.svc.cluster.local:8000
    route:
    - destination:
        host: httpbin.default.svc.cluster.local
        port:
          number: 8000          
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin-port
  namespace: default
spec:
  host: httpbin.default.svc.cluster.local
  trafficPolicy: 
    portLevelSettings:
    - port:
        number: 8000
      loadBalancer:
        simple: ROUND_ROBIN
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-peer-auth
  namespace: default
spec:
  mtls:
    mode: DISABLE
